--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -592,8 +592,8 @@ I love helping my fellow students when they are in need. Coming from a disadvant
             <objects>
                 <navigationController title="Inbox Nav" id="0gK-ch-4nY" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Inbox" image="icon-inbox" selectedImage="icon-inbox" id="TvD-wJ-MiO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="PPf-xf-tSd">
-                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PPf-xf-tSd">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -613,39 +613,55 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="request" textLabel="iIM-NV-890" style="IBUITableViewCellStyleDefault" id="s44-Yi-s2A">
-                                <rect key="frame" x="0.0" y="55.333333333333343" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s44-Yi-s2A" id="Ynp-az-dBx">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iIM-NV-890">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.666666666666664"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="message" textLabel="PWV-0C-0Or" style="IBUITableViewCellStyleDefault" id="Fuc-M0-yVb">
-                                <rect key="frame" x="0.0" y="99.333333333333343" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="message" rowHeight="100" id="Fuc-M0-yVb" customClass="MessageTableViewCell" customModule="ios" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="55.333333333333343" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fuc-M0-yVb" id="9A1-pj-dLu">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.666666666666671"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PWV-0C-0Or">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.666666666666664"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D7R-lv-Onx">
+                                            <rect key="frame" x="16" y="11" width="78" height="78"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="D7R-lv-Onx" secondAttribute="height" multiplier="1:1" id="etn-R6-eFd"/>
+                                            </constraints>
+                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" axis="vertical" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="QMZ-2k-7ov">
+                                            <rect key="frame" x="114" y="15" width="245" height="73"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" verticalHuggingPriority="750" verticalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMo-uq-QVb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="44.666666666666664" height="28.666666666666668"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="749" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8n-p2-xiY">
+                                                    <rect key="frame" x="0.0" y="34.666666666666657" width="140.33333333333334" height="38.333333333333343"/>
+                                                    <string key="text">Message Content
+Message Content
+Message Content</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="QMZ-2k-7ov" secondAttribute="bottom" id="5gg-pS-H3a"/>
+                                        <constraint firstItem="D7R-lv-Onx" firstAttribute="top" secondItem="9A1-pj-dLu" secondAttribute="topMargin" id="Fug-gF-CSc"/>
+                                        <constraint firstItem="QMZ-2k-7ov" firstAttribute="top" secondItem="9A1-pj-dLu" secondAttribute="topMargin" constant="4" id="Gqn-9g-lSE"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="QMZ-2k-7ov" secondAttribute="trailing" id="eMh-IJ-vvr"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="D7R-lv-Onx" secondAttribute="bottom" id="fCH-Xj-0ZW"/>
+                                        <constraint firstItem="QMZ-2k-7ov" firstAttribute="leading" secondItem="D7R-lv-Onx" secondAttribute="trailing" constant="20" id="py1-q8-wit"/>
+                                        <constraint firstItem="D7R-lv-Onx" firstAttribute="leading" secondItem="9A1-pj-dLu" secondAttribute="leadingMargin" id="wjY-gH-lMR"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="latestMessageLabel" destination="E8n-p2-xiY" id="w2v-ys-93K"/>
+                                    <outlet property="threadImage" destination="D7R-lv-Onx" id="vVL-tE-TXR"/>
+                                    <outlet property="threadTitleLabel" destination="XMo-uq-QVb" id="WyF-SP-KQO"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -658,7 +674,7 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R4S-Ni-5sC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1238" y="1739"/>
+            <point key="canvasLocation" x="1237.5999999999999" y="1738.6699507389164"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="tLh-vk-26e">
