--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -86,55 +86,77 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Elg-Ak-R0F">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="588"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="601"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="sender" id="g7d-82-SfK" customClass="MessageScreenMessageView" customModule="ios" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="sender" rowHeight="100" id="g7d-82-SfK" customClass="MessageScreenMessageView" customModule="ios" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g7d-82-SfK" id="Lbn-gf-dhi">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rfd-my-cIp">
-                                                            <rect key="frame" x="15" y="10.999999999999998" width="345" height="21.333333333333329"/>
-                                                            <color key="backgroundColor" red="0.90196078431372551" green="0.90980392156862744" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <view contentMode="scaleToFill" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="rWa-Es-sMc">
+                                                            <rect key="frame" x="15" y="11" width="345" height="78"/>
+                                                            <subviews>
+                                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rfd-my-cIp">
+                                                                    <rect key="frame" x="10" y="10" width="325" height="58"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" red="0.90169662237167358" green="0.90982002019882202" blue="0.91364425420761108" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="bottom" secondItem="Rfd-my-cIp" secondAttribute="bottom" constant="10" id="2Vq-XT-W10"/>
+                                                                <constraint firstItem="Rfd-my-cIp" firstAttribute="leading" secondItem="rWa-Es-sMc" secondAttribute="leading" constant="10" id="QnG-5s-1Wx"/>
+                                                                <constraint firstItem="Rfd-my-cIp" firstAttribute="top" secondItem="rWa-Es-sMc" secondAttribute="top" constant="10" id="nCy-8Z-ASS"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Rfd-my-cIp" secondAttribute="trailing" constant="10" id="uJ2-W5-Jro"/>
+                                                            </constraints>
+                                                        </view>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="Rfd-my-cIp" firstAttribute="top" secondItem="Lbn-gf-dhi" secondAttribute="topMargin" id="9WV-5v-flZ"/>
-                                                        <constraint firstAttribute="bottomMargin" secondItem="Rfd-my-cIp" secondAttribute="bottom" id="BT3-z7-Hhl"/>
-                                                        <constraint firstAttribute="trailingMargin" secondItem="Rfd-my-cIp" secondAttribute="trailing" id="Cja-ge-Gmw"/>
-                                                        <constraint firstAttribute="leadingMargin" secondItem="Rfd-my-cIp" secondAttribute="leading" id="jyW-Ab-Va9"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="rWa-Es-sMc" secondAttribute="bottom" id="1NX-cy-FaE"/>
+                                                        <constraint firstItem="rWa-Es-sMc" firstAttribute="top" secondItem="Lbn-gf-dhi" secondAttribute="topMargin" id="Neh-Op-gW8"/>
+                                                        <constraint firstItem="rWa-Es-sMc" firstAttribute="leading" secondItem="Lbn-gf-dhi" secondAttribute="leadingMargin" id="WGU-f3-WuU"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="rWa-Es-sMc" secondAttribute="trailing" id="ykf-rE-JEB"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
                                                     <outlet property="textField" destination="Rfd-my-cIp" id="taI-0X-bHS"/>
                                                 </connections>
                                             </tableViewCell>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="receiver" id="Ock-4p-qJw" customClass="MessageScreenMessageView" customModule="ios" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="receiver" rowHeight="100" id="Ock-4p-qJw" customClass="MessageScreenMessageView" customModule="ios" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="128" width="375" height="100"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ock-4p-qJw" id="n3f-SP-aeO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="luu-00-Wdx">
-                                                            <rect key="frame" x="15" y="11" width="345" height="22"/>
+                                                        <view contentMode="scaleToFill" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="467-u7-hsZ">
+                                                            <rect key="frame" x="15" y="11" width="345" height="78"/>
+                                                            <subviews>
+                                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="luu-00-Wdx">
+                                                                    <rect key="frame" x="10" y="10" width="325" height="58"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
                                                             <color key="backgroundColor" red="0.93725490196078431" green="0.78823529411764703" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                            <constraints>
+                                                                <constraint firstItem="luu-00-Wdx" firstAttribute="leading" secondItem="467-u7-hsZ" secondAttribute="leading" constant="10" id="AJO-Hg-k0u"/>
+                                                                <constraint firstAttribute="bottom" secondItem="luu-00-Wdx" secondAttribute="bottom" constant="10" id="S2w-AB-S9O"/>
+                                                                <constraint firstItem="luu-00-Wdx" firstAttribute="top" secondItem="467-u7-hsZ" secondAttribute="top" constant="10" id="eat-By-yo1"/>
+                                                                <constraint firstAttribute="trailing" secondItem="luu-00-Wdx" secondAttribute="trailing" constant="10" id="m0M-SI-cHo"/>
+                                                            </constraints>
+                                                        </view>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailingMargin" secondItem="luu-00-Wdx" secondAttribute="trailing" id="1f3-ei-gWs"/>
-                                                        <constraint firstAttribute="bottomMargin" secondItem="luu-00-Wdx" secondAttribute="bottom" id="7ds-Wh-lR8"/>
-                                                        <constraint firstItem="luu-00-Wdx" firstAttribute="leading" secondItem="n3f-SP-aeO" secondAttribute="leadingMargin" id="G9O-gz-2mr"/>
-                                                        <constraint firstAttribute="topMargin" secondItem="luu-00-Wdx" secondAttribute="top" id="PdE-AC-0Q8"/>
+                                                        <constraint firstItem="467-u7-hsZ" firstAttribute="top" secondItem="n3f-SP-aeO" secondAttribute="topMargin" id="gvH-6U-p3f"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="467-u7-hsZ" secondAttribute="bottom" id="mDu-EG-oqi"/>
+                                                        <constraint firstItem="467-u7-hsZ" firstAttribute="leading" secondItem="n3f-SP-aeO" secondAttribute="leadingMargin" id="uZv-fM-6x1"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="467-u7-hsZ" secondAttribute="trailing" id="uug-6a-eLM"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
@@ -144,16 +166,16 @@
                                         </prototypes>
                                     </tableView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="uHc-dw-SgO">
-                                        <rect key="frame" x="0.0" y="588" width="375" height="53"/>
+                                        <rect key="frame" x="0.0" y="601" width="375" height="40"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lGW-ML-YXG">
-                                                <rect key="frame" x="15" y="15" width="311" height="30"/>
+                                                <rect key="frame" x="15" y="15" width="311" height="17"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tue-64-ayH">
-                                                <rect key="frame" x="331" y="15" width="36" height="30"/>
+                                                <rect key="frame" x="331" y="15" width="36" height="17"/>
                                                 <state key="normal" title="Send"/>
                                             </button>
                                         </subviews>
