add in the table view for situation scene

--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -12,6 +12,35 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Situations-->
+        <scene sceneID="7Jo-YG-lsg">
+            <objects>
+                <viewController title="Situations" id="Xmd-SO-NIT" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XIC-rW-OI9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UHB-YA-IZF">
+                                <rect key="frame" x="0.0" y="161" width="375" height="568"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="What is the stuation?" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="33" translatesAutoresizingMaskIntoConstraints="NO" id="Ped-ez-xlI">
+                                <rect key="frame" x="28" y="102" width="157" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="QFN-Of-dSD"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qtx-lE-RwS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-570.39999999999998" y="2587.6847290640394"/>
+        </scene>
         <!--Find Delegate-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -677,11 +706,14 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                                 <rect key="frame" x="37.666666666666657" y="328" width="300" height="381"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="C6I-S8-wmt">
-                                        <rect key="frame" x="78.333333333333343" y="120.66666666666669" width="143" height="140"/>
+                                        <rect key="frame" x="78.333333333333343" y="93.333333333333314" width="143" height="195"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KPX-WL-NKd">
                                                 <rect key="frame" x="0.0" y="0.0" width="143" height="30"/>
                                                 <state key="normal" title="Assess The Situation"/>
+                                                <connections>
+                                                    <segue destination="Xmd-SO-NIT" kind="show" id="10D-Pl-z7a"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTR-qR-Ibn">
                                                 <rect key="frame" x="24" y="55" width="95" height="30"/>
@@ -690,8 +722,12 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                                                     <segue destination="BYZ-38-t0r" kind="show" id="GZ0-SU-fOo"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdf-rC-LGb">
+                                                <rect key="frame" x="34" y="110.00000000000006" width="75" height="30"/>
+                                                <state key="normal" title="4Ds Model"/>
+                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9HK-av-4aa">
-                                                <rect key="frame" x="10" y="109.99999999999994" width="123" height="30"/>
+                                                <rect key="frame" x="10" y="165.00000000000006" width="123" height="30"/>
                                                 <state key="normal" title="Provide Feedback"/>
                                             </button>
                                         </subviews>
